--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 
   <body>
     <%= yield %>
+    <%= yield :javascript_includes %>
     <script type="text/javascript" src="/javascripts/script.js" defer></script>
   </body>
 </html>
