--- a/app/views/static_pages/_featured_recordings.html.erb
+++ b/app/views/static_pages/_featured_recordings.html.erb
@@ -23,7 +23,7 @@
                     <div class="jp-jplayer"></div>
                     <div class="jp-audio jp-audio-0" role="application" aria-label="media player">
                         <ul class="jp-player-list">
-                        <li class="jp-player-list-item" data-jp-title="1. Time To Shine" data-jp-artist="" data-jp-mp3="audio/sound-1.mp3"></li>
+                        # <li class="jp-player-list-item" data-jp-title="1. Time To Shine" data-jp-artist="" data-jp-mp3="audio/sound-1.mp3"></li>
                         </ul>
                         <div class="jp-interface">
                         <div class="jp-button jp-controls">
@@ -52,7 +52,7 @@
                     <div class="jp-jplayer"></div>
                     <div class="jp-audio jp-audio-1" role="application" aria-label="media player">
                         <ul class="jp-player-list">
-                        <li class="jp-player-list-item" data-jp-title="2. Create Your Future (feat. Jane K)" data-jp-artist="" data-jp-mp3="audio/sound-2.mp3"></li>
+                        # <li class="jp-player-list-item" data-jp-title="2. Create Your Future (feat. Jane K)" data-jp-artist="" data-jp-mp3="audio/sound-2.mp3"></li>
                         </ul>
                         <div class="jp-interface">
                         <div class="jp-button jp-controls">
@@ -81,7 +81,7 @@
                     <div class="jp-jplayer"></div>
                     <div class="jp-audio jp-audio-2" role="application" aria-label="media player">
                         <ul class="jp-player-list">
-                        <li class="jp-player-list-item" data-jp-title="3. This City Never Sleeps" data-jp-artist="" data-jp-mp3="audio/sound-1.mp3"></li>
+                        # <li class="jp-player-list-item" data-jp-title="3. This City Never Sleeps" data-jp-artist="" data-jp-mp3="audio/sound-1.mp3"></li>
                         </ul>
                         <div class="jp-interface">
                         <div class="jp-button jp-controls">
@@ -110,7 +110,7 @@
                     <div class="jp-jplayer"></div>
                     <div class="jp-audio jp-audio-3" role="application" aria-label="media player">
                         <ul class="jp-player-list">
-                        <li class="jp-player-list-item" data-jp-title="4. A Call From Bandico Square " data-jp-artist="" data-jp-mp3="audio/sound-3.mp3"></li>
+                        # <li class="jp-player-list-item" data-jp-title="4. A Call From Bandico Square " data-jp-artist="" data-jp-mp3="audio/sound-3.mp3"></li>
                         </ul>
                         <div class="jp-interface">
                         <div class="jp-button jp-controls">
@@ -148,7 +148,7 @@
                     <div class="jp-jplayer"></div>
                     <div class="jp-audio jp-audio-4" role="application" aria-label="media player">
                         <ul class="jp-player-list"> 
-                        <li class="jp-player-list-item" data-jp-title="1. Better Than Nothing" data-jp-artist="" data-jp-mp3="audio/sound-3.mp3"></li>
+                        # <li class="jp-player-list-item" data-jp-title="1. Better Than Nothing" data-jp-artist="" data-jp-mp3="audio/sound-3.mp3"></li>
                         </ul>
                         <div class="jp-interface">
                         <div class="jp-button jp-controls">
@@ -177,7 +177,7 @@
                     <div class="jp-jplayer"></div>
                     <div class="jp-audio jp-audio-5" role="application" aria-label="media player">
                         <ul class="jp-player-list">
-                        <li class="jp-player-list-item" data-jp-title="2. Totally Unmatched" data-jp-artist="" data-jp-mp3="audio/sound-2.mp3"></li>
+                        # <li class="jp-player-list-item" data-jp-title="2. Totally Unmatched" data-jp-artist="" data-jp-mp3="audio/sound-2.mp3"></li>
                         </ul>
                         <div class="jp-interface">
                         <div class="jp-button jp-controls">
@@ -206,7 +206,7 @@
                     <div class="jp-jplayer"></div>
                     <div class="jp-audio jp-audio-6" role="application" aria-label="media player">
                         <ul class="jp-player-list">
-                        <li class="jp-player-list-item" data-jp-title="3. Welcome To My World (feat. Dangerous Joe)" data-jp-artist="" data-jp-mp3="audio/sound-1.mp3"></li>
+                        # <li class="jp-player-list-item" data-jp-title="3. Welcome To My World (feat. Dangerous Joe)" data-jp-artist="" data-jp-mp3="audio/sound-1.mp3"></li>
                         </ul>
                         <div class="jp-interface">
                         <div class="jp-button jp-controls">
@@ -235,7 +235,7 @@
                     <div class="jp-jplayer"></div>
                     <div class="jp-audio jp-audio-7" role="application" aria-label="media player">
                         <ul class="jp-player-list">
-                        <li class="jp-player-list-item" data-jp-title="4. Never Settle (feat. Mega Squad)" data-jp-artist="" data-jp-mp3="audio/sound-1.mp3"></li>
+                        # <li class="jp-player-list-item" data-jp-title="4. Never Settle (feat. Mega Squad)" data-jp-artist="" data-jp-mp3="audio/sound-1.mp3"></li>
                         </ul>
                         <div class="jp-interface">
                         <div class="jp-button jp-controls">
