--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/fonts.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preload" href="fonts/fl-bigmug-line.woff" as="font" type="font/woff" crossorigin="anonymous">
+    <link rel="preload" href="fonts/materialdesignicons-webfont.woff2?v=1.4.57" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/fontawesome-webfont.woff2?v=4.7.0" as="font" type="font/woff2" crossorigin="anonymous"> 
     <script type="text/javascript" src="/javascripts/core.min.js" defer></script>
   </head>
 
