--- a/app/views/static_pages/_newsletter.html.erb
+++ b/app/views/static_pages/_newsletter.html.erb
@@ -2,7 +2,8 @@
     <div class="container">
         <div class="form-style-1">
         <h2 class="title-style-10 wow fadeScale">Join Our <span>News</span>letter</h2>
-        <form class="rd-form rd-mailform rd-form-text-center" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
+        <form class="rd-form rd-mailform rd-form-text-center" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="<%= newsletter_url %>">
+            <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
             <div class="form-wrap wow fadeInUp">
             <input class="form-input" id="subscribe-form-1-email" type="email" name="email" data-constraints="@Email @Required">
             <label class="form-label" for="subscribe-form-1-email">Enter Your E-mail</label>
