--- a/app/views/static_pages/_merch.html.erb
+++ b/app/views/static_pages/_merch.html.erb
@@ -15,7 +15,7 @@
                     </div>
                 </div>
                 <div class="product-button-wrap">
-                    <div class="product-button"><a class="button button-gray-14 button-zakaria fl-bigmug-line-search74" href="single-product.html"></a></div>
+                    <div class="product-button"><a class="button button-gray-14 button-zakaria fl-bigmug-line-search74" href="<%= product_url(:id => product._id) %>"></a></div>
                     <div class="product-button"><a class="button button-primary-2 button-zakaria fl-bigmug-line-shopping202" href="cart-page.html"></a></div>
                 </div>
                 </article>
