--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, 'Home' %>
+
 <% content_for :javascript_includes do %>
     <% javascript_include_tag "/javascripts/eb_widgets.js" %>
 <% end %>
