--- a/app/views/static_pages/_product_info.html.erb
+++ b/app/views/static_pages/_product_info.html.erb
@@ -53,7 +53,7 @@
                 <div class="product-stepper">
                 <input class="form-input" type="number" data-zeros="true" value="1" min="1" max="1000">
                 </div>
-                <div><a class="button button-lg button-secondary button-zakaria" href="cart-page.html">Add to cart</a></div>
+                <div><%= link_to 'Add To Cart', add_to_cart_url(product: product), class: 'button button-lg button-secondary button-zakaria', method: 'post' %></div>
             </div>
             <hr class="hr-gray-100">
             <div class="group-xs group-middle"><span class="list-social-title">Share</span>
