--- a/app/views/static_pages/_product_info.html.erb
+++ b/app/views/static_pages/_product_info.html.erb
@@ -50,10 +50,15 @@
                 <li><span>Sizes:</span><span>S, M, L</span></li>
             </ul>
             <div class="group-xs group-middle">
-                <div class="product-stepper">
-                <input class="form-input" type="number" data-zeros="true" value="1" min="1" max="1000">
-                </div>
-                <div><%= link_to 'Add To Cart', add_to_cart_url(product: product), class: 'button button-lg button-secondary button-zakaria', method: 'post' %></div>
+                <form class="group-xs group-middle" method="post" action="<%= add_to_cart_url(id: product) %>">
+                    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+                    <div class="product-stepper">
+                        <input name="quantity" class="form-input" type="number" data-zeros="true" value="1" min="1" max="1000">
+                    </div>
+                    <div>
+                        <input type="submit" id="add-to-cart" class="button button-lg button-secondary button-zakaria" value="Add To Cart">
+                    </div>
+                </form>
             </div>
             <hr class="hr-gray-100">
             <div class="group-xs group-middle"><span class="list-social-title">Share</span>
