--- a/app/views/static_pages/cart.html.erb
+++ b/app/views/static_pages/cart.html.erb
@@ -1,8 +1,4 @@
-<% content_for :title, @product.name %>
-
-<% content_for :javascript_includes do %>
-  <% javascript_include_tag "/javascripts/cart.js" %>
-<% end %>
+<% content_for :title, 'Cart' %>
 
 <%=  render 'preloader' %>
 <div class="page">
@@ -29,28 +25,20 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <td><a class="table-cart-figure" href="single-product.html"><img src="images/product-mini-4-146x132.jpg" alt="" width="146" height="132"/></a></td>
-                  <td class="text-left"><a class="table-cart-link" href="single-product.html">Stay wild Men’s t-shirt</a></td>
-                  <td>$18.00</td>
-                  <td>
-                    <div class="table-cart-stepper">
-                      <input class="form-input" type="number" data-zeros="true" value="1" min="1" max="1000">
-                    </div>
-                  </td>
-                  <td>$18</td>
-                </tr>
-                <tr>
-                  <td><a class="table-cart-figure" href="single-product.html"><img src="images/product-mini-5-146x132.jpg" alt="" width="146" height="132"/></a></td>
-                  <td class="text-left"><a class="table-cart-link" href="single-product.html">Bandico Baseball Hat</a></td>
-                  <td>$23.00</td>
-                  <td>
-                    <div class="table-cart-stepper">
-                      <input class="form-input" type="number" data-zeros="true" value="1" min="1" max="1000">
-                    </div>
-                  </td>
-                  <td>$23</td>
-                </tr>
+                <% @cart.products.each_with_index do |product, idx| %>
+                  <tr>
+                    <%= content_tag :div, class: "product_info", data: {product: product} do %><% end %>
+                    <td><a class="table-cart-figure" href="<%= product_url(id: product['_id']) %>"><img src="<%= product['image1'] %>" alt="" width="146" height="132"/></a></td>
+                    <td class="text-left"><a class="table-cart-link" href="<%= product_url(id: product['_id']) %>"><%= product['name'] %></a></td>
+                    <td class="product-price" data-price="<%= product['price'] %>">$<%= product['price'] %>.00</td>
+                    <td>
+                      <div class="table-cart-stepper">
+                        <input class="form-input" type="number" data-zeros="true" value="1" min="1" max="1000">
+                      </div>
+                    </td>
+                    <td class="product-total" data-total="<%= product['price'].to_i * product['quantity'].to_i %>">$<%= product['price'].to_i * product['quantity'].to_i %>.00</td>
+                  </tr>
+                <% end %>
               </tbody>
             </table>
           </div>
@@ -71,7 +59,7 @@
                 <div>
                   <div class="group-md group-middle">
                     <div class="heading-5 font-weight-medium text-gray-500">Total</div>
-                    <div class="heading-3 font-weight-normal">$41</div>
+                    <div id="cart-total" class="heading-3 font-weight-normal">$41</div>
                   </div>
                 </div><a class="button button-lg button-primary button-zakaria" href="checkout.html">Proceed to checkout</a>
               </div>
@@ -84,3 +72,7 @@
     <%= render 'footer' %>
 </div>
 <div class="snackbars" id="form-output-global"></div>
+
+<% content_for :javascript_includes do %>
+  <% javascript_include_tag "/javascripts/cart.js", defer: true %>
+<% end %>
