--- a/app/views/static_pages/cart.html.erb
+++ b/app/views/static_pages/cart.html.erb
@@ -26,18 +26,21 @@
               </thead>
               <tbody>
                 <% @cart.products.each_with_index do |product, idx| %>
-                  <tr>
-                    <%= content_tag :div, class: "product_info", data: {product: product} do %><% end %>
-                    <td><a class="table-cart-figure" href="<%= product_url(id: product['_id']) %>"><img src="<%= product['image1'] %>" alt="" width="146" height="132"/></a></td>
-                    <td class="text-left"><a class="table-cart-link" href="<%= product_url(id: product['_id']) %>"><%= product['name'] %></a></td>
-                    <td class="product-price" data-price="<%= product['price'] %>">$<%= product['price'] %>.00</td>
-                    <td>
-                      <div class="table-cart-stepper">
-                        <input class="form-input" type="number" data-zeros="true" value="1" min="1" max="1000">
-                      </div>
-                    </td>
-                    <td class="product-total" data-total="<%= product['price'].to_i * product['quantity'].to_i %>">$<%= product['price'].to_i * product['quantity'].to_i %>.00</td>
-                  </tr>
+                    <tr>
+                      <%= content_tag :div, class: "product-info", data: {product: product} do %><% end %>
+                      <td><a class="table-cart-figure" href="<%= product_url(id: product['_id']) %>"><img src="<%= product['image1'] %>" alt="" width="146" height="132"/></a></td>
+                      <td class="text-left"><a class="table-cart-link" href="<%= product_url(id: product['_id']) %>"><%= product['name'] %></a></td>
+                      <td class="product-price" data-price="<%= product['price'] %>">$<%= product['price'] %>.00</td>
+                      <td>
+                        <form method="post" action="<%= update_quantity_url(idx: idx) %>">
+                          <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+                          <div class="table-cart-stepper">
+                            <input name="quantity" class="form-input" type="number" data-zeros="true" value="1" min="1" max="1000">
+                          </div>
+                        </form>
+                      </td>
+                      <td class="product-total" data-total="<%= product['price'].to_i * product['quantity'].to_i %>">$<%= product['price'].to_i * product['quantity'].to_i %>.00</td>
+                    </tr>
                 <% end %>
               </tbody>
             </table>
@@ -61,7 +64,7 @@
                     <div class="heading-5 font-weight-medium text-gray-500">Total</div>
                     <div id="cart-total" class="heading-3 font-weight-normal">$41</div>
                   </div>
-                </div><a class="button button-lg button-primary button-zakaria" href="checkout.html">Proceed to checkout</a>
+                </div><a id="proceed-to-checkout" class="button button-lg button-primary button-zakaria" href="checkout.html">Proceed to checkout</a>
               </div>
             </div>
           </div>
