--- a/app/views/static_pages/cart.html.erb
+++ b/app/views/static_pages/cart.html.erb
@@ -9,67 +9,8 @@
     <!-- Parallax Header -->
     <%= render 'parallax_header', background_image: 'images/bg-blog.jpg', title: 'Cart' %>
 
-      <!-- Shopping Cart-->
-      <section class="section section-xl bg-default"> 
-        <div class="container">
-          <!-- shopping-cart-->
-          <div class="table-custom-responsive">
-            <table class="table-custom table-cart">
-              <thead>
-                <tr>
-                  <th>Product name</th>
-                  <th></th>
-                  <th>Price</th>
-                  <th>Quantity</th>
-                  <th>Total</th>
-                </tr>
-              </thead>
-              <tbody>
-                <% @cart.products.each_with_index do |product, idx| %>
-                    <tr>
-                      <%= content_tag :div, class: "product-info", data: {product: product} do %><% end %>
-                      <td><a class="table-cart-figure" href="<%= product_url(id: product['_id']) %>"><img src="<%= product['image1'] %>" alt="" width="146" height="132"/></a></td>
-                      <td class="text-left"><a class="table-cart-link" href="<%= product_url(id: product['_id']) %>"><%= product['name'] %></a></td>
-                      <td class="product-price" data-price="<%= product['price'] %>">$<%= product['price'] %>.00</td>
-                      <td>
-                        <form method="post" action="<%= update_quantity_url(idx: idx) %>">
-                          <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-                          <div class="table-cart-stepper">
-                            <input name="quantity" class="form-input" type="number" data-zeros="true" value="1" min="1" max="1000">
-                          </div>
-                        </form>
-                      </td>
-                      <td class="product-total" data-total="<%= product['price'].to_i * product['quantity'].to_i %>">$<%= product['price'].to_i * product['quantity'].to_i %>.00</td>
-                    </tr>
-                <% end %>
-              </tbody>
-            </table>
-          </div>
-          <div class="group-xl group-justify justify-content-center justify-content-md-between">
-            <div>
-              <form class="rd-form rd-mailform rd-form-inline rd-form-coupon">
-                <div class="form-wrap">
-                  <input class="form-input form-input-inverse" id="coupon-code" type="text" name="text">
-                  <label class="form-label" for="coupon-code">Coupon code</label>
-                </div>
-                <div class="form-button">
-                  <button class="button button-lg button-secondary button-zakaria" type="submit">Apply</button>
-                </div>
-              </form>
-            </div>
-            <div>
-              <div class="group-xl group-middle">
-                <div>
-                  <div class="group-md group-middle">
-                    <div class="heading-5 font-weight-medium text-gray-500">Total</div>
-                    <div id="cart-total" class="heading-3 font-weight-normal">$41</div>
-                  </div>
-                </div><a id="proceed-to-checkout" class="button button-lg button-primary button-zakaria" href="checkout.html">Proceed to checkout</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+    <!-- Shopping Cart -->
+    <%= render 'shopping_cart', products: @cart.products, cart_page: true %>
 
     <!-- Footer -->
     <%= render 'footer' %>
