pre order model creation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,8 @@
 
   <body>
     <%= yield %>
-    <%= yield :javascript_includes %>
+    <%= yield :javascript_includes_1 %>
+    <%= yield :javascript_includes_2 %>
     <script type="text/javascript" src="/javascripts/script.js" defer></script>
   </body>
 </html>
