--- a/app/views/static_pages/cart.html.erb
+++ b/app/views/static_pages/cart.html.erb
@@ -17,6 +17,6 @@
 </div>
 <div class="snackbars" id="form-output-global"></div>
 
-<% content_for :javascript_includes do %>
+<% content_for :javascript_includes_1 do %>
   <% javascript_include_tag "/javascripts/cart.js", defer: true %>
 <% end %>
