configure checkout.js to use isValidated function

--- a/app/views/static_pages/checkout.html.erb
+++ b/app/views/static_pages/checkout.html.erb
@@ -31,7 +31,7 @@
                   </div>
                   <div class="col-12">
                     <div class="form-wrap">
-                      <input value="test" class="form-input" id="checkout-company-1" type="text" name="ba_company"/>
+                      <input value="test" class="form-input" id="checkout-company-1" type="text" name="ba_company"/ data-constraints="@Required">
                       <label class="form-label" for="checkout-company-1">Company</label>
                     </div>
                   </div>
