--- a/app/views/static_pages/checkout.html.erb
+++ b/app/views/static_pages/checkout.html.erb
@@ -1,5 +1,7 @@
 <% content_for :title, 'Checkout' %>
 
+<script src="https://js.stripe.com/v3/" defer></script>
+
 <%=  render 'preloader' %>
 <div class="page">
     <!-- Header-->
@@ -8,13 +10,16 @@
     <!-- Parallax Header -->
     <%= render 'parallax_header', background_image: 'images/bg-blog.jpg', title: 'Checkout' %>
 
+    <!-- Shopping Cart -->
+    <%= render 'shopping_cart', products: @cart.products, cart_page: false %>
+
       <!-- Section checkout form-->
       <section class="section section-lg bg-default text-md-left">
         <div class="container">
           <div class="row row-50 justify-content-center">
             <div class="col-md-10 col-lg-6">
-              <h3 class="font-weight-medium">Billing Address</h3>
-              <form id="billing-address" class="rd-form rd-mailform form-checkout" method="post" action="<%= checkout_url %>">
+              <h3 class="font-weight-medium text-center">Billing Address</h3>
+              <form id="payment-form" class="rd-form rd-mailform form-checkout" method="post" action="<%= checkout_url %>">
               <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
                 <div class="row row-30">
                   <div class="col-sm-6">
@@ -60,135 +65,39 @@
                     </div>
                   </div>
                 </div>
-                
-                <label class="checkbox-inline text-transform-capitalize">
-                  <input id="billing-shipping-same" name="input-checkbox-1" value="checkbox-1" type="checkbox"/>My Billing Address and Shipping Address are the same
-                </label>
-              </form>
             </div>
-            <div class="col-md-10 col-lg-6">
-              <h3 class="font-weight-medium">Delivery Address</h3>
-              <form id="shipping-address" class="rd-form rd-mailform form-checkout">
-                <div class="row row-30">
-                  <div class="col-sm-6">
-                    <div class="form-wrap">
-                      <input value="test" class="form-input" id="checkout-first-name-2" type="text" name="sa_fname" data-constraints="@Required"/>
-                      <label class="form-label" for="checkout-first-name-2">First Name</label>
-                    </div>
-                  </div>
-                  <div class="col-sm-6">
-                    <div class="form-wrap">
-                      <input value="test" class="form-input" id="checkout-last-name-2" type="text" name="sa_lname" data-constraints="@Required"/>
-                      <label class="form-label" for="checkout-last-name-2">Last Name</label>
-                    </div>
-                  </div>
-                  <div class="col-12">
-                    <div class="form-wrap">
-                      <input value="test" class="form-input" id="checkout-company-2" type="text" name="sa_company" />
-                      <label class="form-label" for="checkout-company-2">Company</label>
-                    </div>
-                  </div>
-                  <div class="col-12">
-                    <div class="form-wrap">
-                      <input value="test" class="form-input" id="checkout-address-2" type="text" name="sa_address" data-constraints="@Required"/>
-                      <label class="form-label" for="checkout-address-2">Address</label>
-                    </div>
-                  </div>
-                  <div class="col-12">
-                    <div class="form-wrap">
-                      <input value="test" class="form-input" id="checkout-city-2" type="text" name="sa_city" data-constraints="@Required"/>
-                      <label class="form-label" for="checkout-city-2">City/Town</label>
-                    </div>
-                  </div>
-                  <div class="col-sm-6">
-                    <div class="form-wrap">
-                      <input value="test" class="form-input" id="checkout-email-2" type="email" name="sa_email" data-constraints="@Email @Required"/>
-                      <label class="form-label" for="checkout-email-2">E-Mail</label>
-                    </div>
-                  </div>
-                  <div class="col-sm-6">
-                    <div class="form-wrap">
-                      <input value="test" class="form-input" id="checkout-phone-2" type="text" name="sa_phone" data-constraints="@Numeric"/>
-                      <label class="form-label" for="checkout-phone-2">Phone</label>
-                    </div>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </section>
-
-    <!-- Shopping Cart -->
-    <%= render 'shopping_cart', products: @cart.products, cart_page: false %>
-
-      <!-- Section Payment-->
-      <section class="section section-lg bg-default text-md-left">
-        <div class="container">
-          <div class="row row-50 justify-content-center">
-            <div class="col-md-10 col-lg-6">
-              <h3 class="font-weight-medium">Payment methods</h3>
-              <!-- Currently Only Accepting One Payment Method (Stripe) -->
-              <% if false %>
-              <div class="box-radio">
-                <div class="radio-panel">
-                  <label class="radio-inline active">
-                    <input name="input-group-radio" value="checkbox-1" type="radio" checked>Direct Bank Transfer
-                  </label>
-                  <div class="radio-panel-content">
-                    <p>Make your payment directly into our bank account. Please use your Order ID as the payment reference. Your order will be shipped right away.</p>
-                  </div>
-                </div>
-                <div class="radio-panel">
-                  <label class="radio-inline">
-                    <input name="input-group-radio" value="checkbox-1" type="radio">PayPal
-                  </label>
-                  <div class="radio-panel-content">
-                    <p>Pay via PayPal; you can pay with your credit card if you don’t have a PayPal account.</p>
-                  </div>
-                </div>
-                <div class="radio-panel">
-                  <label class="radio-inline">
-                    <input name="input-group-radio" value="checkbox-1" type="radio">Cheque Payment
-                  </label>
-                  <div class="radio-panel-content">
-                    <p>Please send a check to Store Name, Store Street, Store Town, Store State / County, Store Postcode.</p>
-                  </div>
-                </div>
-              </div>
-              <% end %>
-              <form action="/charge" method="post" id="payment-form">
-                <div class="form-row">
-                  <label for="card-element">
-                    Credit or debit card
-                  </label>
-                  <div id="card-element" class="form-control"></div>
-                  <div id="card-errors" role="alert"></div>
-                </div>
-              </form>
-              <a id="purchase-items" class="button button-lg button-primary button-zakaria" href="#">Purchase Items</a>  
-            </div>
-            <div class="col-md-10 col-lg-6">
-              <h3 class="font-weight-medium">Cart total</h3>
-              <div class="table-custom-responsive">
+            <div id="cart-toal" class="col-md-10 col-lg-6">
+                <h3 class="font-weight-medium text-center">Cart total</h3>
+                <div class="table-custom-responsive">
                 <table class="table-custom table-custom-primary table-checkout">
-                  <tbody>
+                    <tbody>
                     <tr>
-                      <td>Cart Subtotal</td>
-                      <td class="cart-total">$41</td>
+                        <td>Cart Subtotal</td>
+                        <td class="cart-total">$41</td>
                     </tr>
                     <tr>
-                      <td>Shipping</td>
-                      <td>Free</td>
+                        <td>Shipping</td>
+                        <td>Free</td>
                     </tr>
                     <tr>
-                      <td>Total</td>
-                      <td class="cart-total">$41</td>
+                        <td>Total</td>
+                        <td class="cart-total">$41</td>
                     </tr>
-                  </tbody>
+                    </tbody>
                 </table>
-              </div>
+                </div>
+                <div id="payment-box" style="margin-top: 50px;">
+                    <div class="form-row">
+                    <label for="card-element">
+                        
+                    </label>
+                    <div id="card-element" class="form-control"></div>
+                    <div id="card-errors" role="alert"></div>
+                    </div>
+                    <a id="purchase-items" class="button button-lg button-primary button-zakaria" href="#">Purchase Items</a>
+                </div>
             </div>
+            </form>
           </div>
         </div>
       </section>
@@ -198,7 +107,6 @@
 </div>
 <div class="snackbars" id="form-output-global"></div>
 
-<script src="https://js.stripe.com/v3/" defer></script>
 <script src="/javascripts/stripe.js" defer></script>
 
 <% content_for :javascript_includes_1 do %>
