finish shop and cleaning up blog_grid, blog_post

--- a/app/views/static_pages/cart.html.erb
+++ b/app/views/static_pages/cart.html.erb
@@ -17,6 +17,4 @@
 </div>
 <div class="snackbars" id="form-output-global"></div>
 
-<% content_for :javascript_includes_1 do %>
-  <% javascript_include_tag "/javascripts/cart.js", defer: true %>
-<% end %>
+<script src="/javascripts/cart.js" defer></script>
