--- a/app/views/static_pages/product.html.erb
+++ b/app/views/static_pages/product.html.erb
@@ -1,9 +1,5 @@
 <% content_for :title, @product.name %>
 
-<% content_for :javascript_includes do %>
-  <% javascript_include_tag "/javascripts/cart.js" %>
-<% end %>
-
 <%=  render 'preloader' %>
 <div class="page">
     <!-- Header-->
@@ -22,3 +18,5 @@
     <%= render 'footer' %>
 </div>
 <div class="snackbars" id="form-output-global"></div>
+
+<script src="/javascripts/cart.js" defer></script>
