configure frontend portion of stripe api

--- a/app/views/static_pages/checkout.html.erb
+++ b/app/views/static_pages/checkout.html.erb
@@ -21,6 +21,6 @@
 </div>
 <div class="snackbars" id="form-output-global"></div>
 
-<script src="/javascripts/stripe.js" defer></script>
+# <script src="/javascripts/stripe.js" defer></script>
 <script src="/javascripts/checkout.js" defer></script>
 <script src="/javascripts/cart.js" defer></script>
