add document ready to checkout.js

--- a/app/views/static_pages/_shopping_cart.html.erb
+++ b/app/views/static_pages/_shopping_cart.html.erb
@@ -61,7 +61,7 @@
                     <% if products.length > 0 %>
                         <a id="proceed-to-checkout" class="button button-lg button-primary button-zakaria" href="<%= checkout_page_url %>">Proceed to checkout</a>
                     <% else %>
-                        <a class="button button-lg button-primary button-zakaria" href="<%= checkout_page_url %>">Continue Shopping</a>
+                        <a class="button button-lg button-primary button-zakaria" href="<%= shop_url %>">Continue Shopping</a>
                     <% end %>
                 </div>
             </div>
