change test values of checkout_form

--- a/app/views/static_pages/_checkout_form.html.erb
+++ b/app/views/static_pages/_checkout_form.html.erb
@@ -38,13 +38,13 @@
                 </div>
                 <div class="col-sm-6">
                 <div class="form-wrap">
-                    <input value="test" class="form-input" id="checkout-email-1" type="email" name="email" data-constraints="@Email @Required"/>
+                    <input value="test@aol.com" class="form-input" id="checkout-email-1" type="email" name="email" data-constraints="@Email @Required"/>
                     <label class="form-label" for="checkout-email-1">E-Mail</label>
                 </div>
                 </div>
                 <div class="col-sm-6">
                 <div class="form-wrap">
-                    <input value="test" class="form-input" id="checkout-phone-1" type="text" name="phone" data-constraints="@Numeric"/>
+                    <input value="1234567890" class="form-input" id="checkout-phone-1" type="text" name="phone" data-constraints="@Numeric"/>
                     <label class="form-label" for="checkout-phone-1">Phone</label>
                 </div>
                 </div>
