update purchase_confirmation page

--- a/app/views/static_pages/purchase_confirmation.html.erb
+++ b/app/views/static_pages/purchase_confirmation.html.erb
@@ -12,7 +12,17 @@
         <div class="container">
             <div class="row row-50 justify-content-center">
                 <h2>Thank you for your purchase</h2>
-                <%= @order.inspect %>
+                <p>Order Id: <%= @order._id %>
+                <h3>Products</h3>
+                <%= @order.products.each do |product| %>
+                    <p>Name: <%= product.name %></p>
+                    <p>Price: <%= product.price %></p>
+                    <p>quantity: <%= product.quantity %></p>
+                <% end %>
+                <h3>Shipping Address</h3>
+                <p><%= @order.shipping_address %></p>
+                <h3>Total</h3>
+                <p><%= @order.total %></p>
             </div>
         </div>
     </section>
