--- a/app/views/static_pages/purchase_confirmation.html.erb
+++ b/app/views/static_pages/purchase_confirmation.html.erb
@@ -11,17 +11,15 @@
     <section class="section section-xxl bg-gray-4 text-md-left">
         <div class="container">
             <h2>Thank you for your purchase</h2>
-            <p>Order Id: <%= @order._id %>
+            <p style="margin-bottom: 30px">Order Id: <%= @order._id %>
             <h3>Products</h3>
             <% @order.products.each do |product| %>
-                <p>Name: <%= product['name'] %></p>
+                <p>Name: <%= product.name %></p>
                 <p>Price: <%= product['price'] %></p>
                 <p>quantity: <%= product['quantity'] %></p>
             <% end %>
-            <h3>Shipping Address</h3>
-            <p><%= @order.shipping_address['address'] %></p>
-            <h3>Total</h3>
-            <p><%= @order.total %></p>
+            <p>Shipping Address: <%= @order.shipping_address['address'] %></p>
+            <p>Total: <%= @order.total %></p>
         </div>
     </section>
 
