add root_url to main logo

--- a/app/views/static_pages/_header.html.erb
+++ b/app/views/static_pages/_header.html.erb
@@ -23,7 +23,7 @@
                 <!-- RD Navbar Toggle-->
                 <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                 <!-- RD Navbar Brand-->
-                <div class="rd-navbar-brand"><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/logo-default-220x20.png" alt="" width="220" height="20" srcset="images/logo-default-439x39.png 2x"/><img class="brand-logo-light" src="images/logo-inverse-298x27.png" alt="" width="298" height="27" srcset="images/logo-inverse-595x53.png 2x"/></a>
+                <div class="rd-navbar-brand"><a class="brand" href="<%= root_url %>"><img class="brand-logo-dark" src="images/logo-default-220x20.png" alt="" width="220" height="20" srcset="images/logo-default-439x39.png 2x"/><img class="brand-logo-light" src="images/logo-inverse-298x27.png" alt="" width="298" height="27" srcset="images/logo-inverse-595x53.png 2x"/></a>
                 </div>
             </div>
             <div class="rd-navbar-aside-element">
